--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/paskuvan/ecommerce-api#readme",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
